force-app/main/default/objects/Module_Lesson__c/Module_Lesson__c.object-meta.xml
<CustomObject>
    <description>Tracks all lessons included in a module.</description>
    <label>Module Lesson</label>
    <nameField>
        <label>Module Lesson Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Module Lessons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>