force-app/main/default/objects/Module_Lesson__c/fields/Lesson__c.field-meta.xml
<CustomField>
    <fullName>Lesson__c</fullName>
    <description>Lesson</description>
    <label>Lesson</label>
    <referenceTo>Lesson__c</referenceTo>
    <relationshipLabel>Module Lessons</relationshipLabel>
    <relationshipName>Module_Lessons</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>