force-app/main/default/objects/Module_Lesson__c/fields/Lesson_Name__c.field-meta.xml
<CustomField>
    <fullName>Lesson_Name__c</fullName>
    <formula>Lesson__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lesson Name</label>
    <type>Text</type>
</CustomField>