force-app/main/default/objects/Module_Lesson__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <description>Module</description>
    <label>Module</label>
    <referenceTo>Module__c</referenceTo>
    <relationshipLabel>Module Lessons</relationshipLabel>
    <relationshipName>Module_Lessons</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>